kubernetes/argocd/install.yaml
# Gateway e VirtualService para ArgoCD
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argocd.fintech.internal"
    tls:
      mode: SIMPLE
      credentialName: argocd-tls-certificate
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
  - "argocd.fintech.internal"
  gateways:
  - argocd-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 443
    headers:
      request:
        set:
          X-Forwarded-Proto: https
